--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
+
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
+}
+
+.name-shadow-teal {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
+               0 0 5px rgba(13, 148, 136, 0.7),
+               0 0 10px rgba(13, 148, 136, 0.5);
 }
 
 .logo {
